Add endpoint to find professor by name